Manifest-file/Merchanr-Portal/service.yaml
# Service
apiVersion: v1
kind: Service
metadata:
  name: merchant-portal-ui-service
  namespace: msp
spec:
  selector:
    app: merchant-portal-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer

# Ingress
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: merchant-portal-ingress
#   namespace: msp
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   rules:
#   - host: merchant-portal.digitalfiat.app
#     http:
#       paths:
#       - pathType: Prefix
#         path: "/"
#         backend:
#           service:
#             name: merchant-portal-ui-service
#             port:
#               number: 80
