Manifest-file/Merchanr-Portal/ingress.yaml
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: merchant-portal-ingress
  namespace: msp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx  # Specify NGINX Ingress Controller
spec:
  rules:
  - host: merchant-portal.digitalfiat.app
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: merchant-portal-ui-service
            port:
              number: 80
